Fix for backdrop not covering full height on scroll

--- a/panel-app/src/global/app.scss
+++ b/panel-app/src/global/app.scss
@@ -14,6 +14,10 @@ body {
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 }
 
+body:has(ion-modal.show-modal){
+	overflow: hidden;
+}
+
 ion-popover .no-files-option {
 	color: #565b66;
 	font-family: Gibson;
